# simple-2d-constraint-solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: clutch_constraint.h  constant_rotation_constraint.h  constraint.h  fixed_position_constraint.h  fixed_rotation_constraint.h  gauss_seidel_sle_solver.h  gaussian_elimination_sle_solver.h  gravity_force_generator.h  line_constraint.h  link_constraint.h  matrix.h  matrix_custom.h  matrix_eigen.h  optimized_nsv_rigid_body_system.h  rigid_body.h  rigid_body_system.h  rolling_constraint.h  scs.h  simple_gear_constraint.h  sle_solver.h  sparse_matrix.h  spring.h  system_state.h  utilities.h
src/: clutch_constraint.cpp  conjugate_gradient_sle_solver.cpp  constant_rotation_constraint.cpp  constant_speed_motor.cpp  constraint.cpp  euler_ode_solver.cpp  fixed_position_constraint.cpp  fixed_rotation_constraint.cpp  force_generator.cpp  gauss_seidel_sle_solver.cpp  gaussian_elimination_sle_solver.cpp  generic_rigid_body_system.cpp  gravity_force_generator.cpp  line_constraint.cpp  link_constraint.cpp  matrix.cpp  matrix_custom.cpp  matrix_eigen.cpp  nsv_ode_solver.cpp  ode_solver.cpp  optimized_nsv_rigid_body_system.cpp  rigid_body.cpp  rigid_body_system.cpp  rk4_ode_solver.cpp  rolling_constraint.cpp  rotation_friction_constraint.cpp  simple_gear_constraint.cpp  sle_solver.cpp  sparse_matrix.cpp  spring.cpp  static_force_generator.cpp  system_state.cpp  utilities.cpp
test/: conjugate_gradient_sle_solver_tests.cpp  euler_ode_solver_tests.cpp  gauss_seidel_sle_solver_tests.cpp  gaussian_elimination_sle_solver_tests.cpp  matrix_tests.cpp  rk4_ode_solver_tests.cpp  rolling_constraint_tests.cpp  sanity_tests.cpp  sparse_matrix_tests.cpp  utilities.cpp  utilities.h
